<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lista de Compras</string>
    <string name="add_shop_item_content_description">Add new shop item</string>
    <string name="name_hint">Name:</string>
    <string name="count_hint">Count:</string>
    <string name="units_hint">Units:</string>
    <string name="save_btn">SAVE</string>
    <string name="error_input_name">please enter a name</string>
    <string name="error_input_count">please enter a positive value or remove units</string>
    <string name="error_input_list_name">please enter a unique name</string>
    <string name="error_input_list_name_duplicated">this name is not unique</string>
    <string name="error_input_list_name_empty">the field is empty</string>
    <string name="new_list">New List</string>
    <string name="my_lists">My List Collection</string>
    <string name="create_list">Create List</string>
    <string name="cansel_create_list">Cancel</string>
    <string name="save_name">Save Name</string>
    <string name="save_as_text_file">Save as text file</string>
    <string name="load_text_file">Load from file</string>
    <string name="snack_bar_undo_delete_item_text" tools:ignore="TypographyEllipsis">Item deleting ...</string>
    <string name="snack_bar_undo_delete_list_text" tools:ignore="TypographyEllipsis">List deleting ...</string>
    <string name="undo">\nUNDO\n</string>
    <string name="ok">\nOK\n</string>
    <string name="rename_list">Rename list</string>
    <string name="share_text_file">Share list</string>
    <string name="cancel_the_list_creation_are_you_sure">Cancel the list creation.\nAre You sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="card_new_list_title">Select a name for the list\nand edit it if necessary</string>
    <string name="do_not_modify_this_file_top_warning"># This file is automatically generated by ListaDeComprasApp.\n# Please do not modify this file.\n\n\n\n</string>
</resources>